--- a/cart.html
+++ b/cart.html
@@ -105,140 +105,112 @@
 		</div>
 
 
-		<div class="main-container">
+    <div class="main-container">
+      <section class="hero-slider background-cart">
 
-      <a class="promo-banner" href="http://bit.ly/formation-bounce">
-        50% DE REMISE SUR VOTRE FORMATION - VALABLE JUSQU'AU 29/02/16 - CLIQUEZ ICI
-      </a>
-
-      <section class="hero-slider">
-        <ul class="slides">
-          <li class="overlay">
-            <div class="background-image-holder parallax-background">
-              <img class="background-image" alt="Background Image" src="img/cinqs/ridewithstyle.png">
+        <div class="container cart">
+          <div class="row">
+            <div class="col-sm-9">
+              <span class="title-cart">Panier</span>
             </div>
-
-            <div class="container align-vertical">
-              <div class="row">
-                <div class="col-md-12 col-sm-9 text-center">
-                  <h1 class="text-white">Réussite à l'examen VTC 100% garantie</h1>
-
-                  <a href="http://bit.ly/formation-formulaire" class="btn btn-red btn-primary btn-filled">OBTENEZ VOTRE CARTE VTC</a>
-                </div>
-              </div>
+            <div class="col-sm-3 right">
+            <a href="http://bit.ly/formation-formulaire" class="checkout-btn">PAIEMENT SÉCURISÉ</a>
             </div>
-          </li>
-        </ul>
+          </div>
+          <div class="row form-cart">
+            <div class="col-sm-6 column-cart">
+              <span>Description</span>
+            </div>
+            <div class="col-sm-2 right">
+              <span>Quantité</span>
+            </div>
+            <div class="col-sm-2 right">
+              <span>Prix unitaire</span>
+            </div>
+            <div class="col-sm-2 right">
+              <span>Montant</span>
+            </div>
+          </div>
+          <div class="row content-cart">
+            <div class="col-sm-6">
+              <p class="article-cart">Formation e-learning</p>
+              <span class="promo">REMISE EXCEPTIONNELLE DE 50%</span><br>
+              <span>valable jusqu'au 29/02/2016
+              <br><br>
+              Préparation examen VTC.<br>
+              Formation en ligne accessible 24h/24
+              <br><br>
+              Inclus dans la formation :
+              <br><br>
+              • 5 modules de préparation à l’examen certifié<br>
+              • +400 questions préparatoires<br>
+              • 150 heures de contenu interactif<br>
+              • 5 examens blancs</span>
+            </div>
+            <div class="col-sm-2 right">
+              <p class="article-cart">1,00</p>
+            </div>
+            <div class="col-sm-2 right">
+              <p class="article-cart">790 €</p>
+            </div>
+            <div class="col-sm-2 right">
+              <p class="article-cart">395 €</p>
+            </div>
+          </div>
+          <div class="row content-cart">
+            <div class="col-sm-6">
+              <p class="article-cart">Frais d'inscription à l'examen</p>
+            </div>
+            <div class="col-sm-2 right">
+              <p class="article-cart">1,00</p>
+            </div>
+            <div class="col-sm-2 right">
+              <p class="article-cart">149 €</p>
+            </div>
+            <div class="col-sm-2 right">
+              <p class="article-cart">149 €</p>
+            </div>
+          </div>
+          <div class="row content-cart">
+            <div class="col-sm-6">
+              <p class="article-cart">Module sur la connaissance et l'histoire de la ville de votre choix</p>
+              <span>Offert</span>
+            </div>
+            <div class="col-sm-2 right">
+              <p class="article-cart">1,00</p>
+            </div>
+            <div class="col-sm-2 right">
+              <p class="article-cart">0 €</p>
+            </div>
+            <div class="col-sm-2 right">
+              <p class="article-cart">0 €</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-6">
+            </div>
+            <div class="col-sm-2 right">
+            </div>
+            <div class="col-sm-2">
+              <p class="total-cart right">Total</p>
+            </div>
+            <div class="col-sm-2 right">
+              <p class="total-cart green">544 €</p>
+            </div>
+          </div>
+          <div class="row second">
+            <div class="col-sm-9">
+            </div>
+            <div class="col-sm-3 right">
+              <button id="customButton" class="checkout-btn">PAIEMENT SÉCURISÉ</button>
+            </div>
+          </div>
+
+        </div>
+
       </section>
 
-			<section class="duplicatable-content">
-
-				<div class="container">
-
-
-					<div class="row">
-						<div class="col-sm-6">
-							<div class="feature feature-icon-large">
-								<div class="pull-left">
-									<i class="icon  icon_ribbon_alt"></i>
-								</div>
-								<div class="pull-right">
-									<h2>Devenir chauffeur VTC pour 790€ TTC</h2>
-									<p>
-                    <strong>Inclut dans la formation :</strong><br><br>
-                    • 5 modules de préparation à l’examen certifié<br>
-                    • + de 400 questions préparatoires<br>
-                    • 150 heures de contenu interactif (vidéos, documents officiels, mises en situation)<br>
-                    • Examens blancs<br>
-                    • 1 module offert sur la connaissance et l’histoire d’un ville française de votre choix<br><br><br>
-                    La formation est ouverte à tous, partout en France. Il n’y a pas de niveau de formation minimum.<br><br>
-                    Vous avez accés aux contenus en illimité jusqu'à ce que vous réussissiez l'examen final. Sans frais supplémentaire, sans date limite.<br><br>
-									</p>
-                  <a href="http://bit.ly/formation-formulaire" class="more-button">En savoir plus ></a>
-								</div>
-							</div>
-						</div>
-
-						<div class="col-sm-6">
-							<div class="feature feature-icon-large">
-								<div class="pull-left">
-									<i class="icon icon_briefcase"></i>
-								</div>
-								<div class="pull-right">
-                  <h2>Examen de conducteur VTC - 149€ TTC</h2>
-                  <p>
-                    Passez votre examen VTC dans les meilleures conditions de confort et de concentration
-                    <br><br>
-                    Avant toute inscription, assurez-vous que vous répondez aux critères ci-dessous :
-                    <br><br>
-                    • Un permis de conduire B délivré il y a au moins 3 ans (2 ans en cas de conduite accompagnée)<br>
-                    • Votre PSC1 de moins de 2 ans
-                    <br><br>
-                    <strong>Vous pouvez passer cet examen en candidat libre, toutefois nous vous recommandons de suivre une formation pour l’aborder dans les meilleures conditions.</strong>
-                  </p>
-                  <a href="http://bit.ly/formation-formulaire" class="more-button">En savoir plus ></a>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="row">
-						<div class="col-sm-6">
-							<div class="feature feature-icon-large">
-								<div class="pull-left">
-									<i class="icon icon_rook"></i>
-								</div>
-								<div class="pull-right">
-                  <h2>Centre de formation VTC agréé</h2>
-                  <p>
-                    <strong>Arrété préfectoral n° DTPP 2014 249
-                    <br>Numéro d'agrèment 14-04</strong><br><br>
-                    <strong>Le programme couvre l’ensemble du référentiel de connaissances défini par l’arrêté ministériel du 2 février 2016.</strong>
-                    <br><br>Programme:<br>
-                    • Droit des transports<br>
-                    • Sécurité <br>
-                    • Gestion <br>
-                    • Relation Client<br>
-                    • Langue Française et Langue Anglaise
-                  </p>
-                  <a href="http://bit.ly/formation-formulaire" class="more-button">En savoir plus ></a>
-								</div>
-							</div>
-						</div>
-
-						<div class="col-sm-6">
-							<div class="feature feature-icon-large">
-								<div class="pull-left">
-									<i class="icon icon_calendar"></i>
-								</div>
-								<div class="pull-right">
-									<h2>Stage présentiel “intensif” optionnel</h2>
-									<p>
-                    En  option, bénéficiez de l'accès à des modules spécifiques pour optimiser vos résultats :<br><br>
-                    • Astuces et conseils du chauffeur de Grande Remise (sessions de 4h00)<br>
-                    • Anglais Niveau B1 (sessions de 8h00)<br><br>
-                    Ils vous apporteront l’ensemble du référentiel de connaissances nécessaires à la réussite de votre examen.<br>
-                    <strong>Ces programmes sont optionnels et à la demande.</strong>
-									</p>
-                  <a href="http://bit.ly/formation-formulaire" class="more-button">En savoir plus ></a>
-								</div>
-							</div>
-						</div>
-					</div>
-
-				</div>
-
-				<div class="containter">
-					<div class="row">
-						<div class="col-sm-12 text-center">
-							<a href="http://bit.ly/formation-formulaire" title="demande de dossier d'inscription et inscription à la formation" class="btn btn-red btn-primary btn-lg btn-filled">OBTENEZ VOTRE CARTE VTC</a>
-						</div>
-					</div>
-				</div>
-
-			</section>
-		</div>
-
+    </div>""
 
     <footer class="details">
       <div class="container">
