Add payment icon

--- a/cart.html
+++ b/cart.html
@@ -200,6 +200,8 @@
           </div>
           <div class="row second">
             <div class="col-sm-9">
+              <img src="img/cinqs/big.png" alt="cb-image" class="stripe" /><br>
+              <img src="img/cinqs/cb-icon.png" alt="cb-image" />
             </div>
             <div class="col-sm-3 right">
               <button id="customButton" class="checkout-btn">PAIEMENT SÉCURISÉ</button>
