Fix top payment button

--- a/cart.html
+++ b/cart.html
@@ -114,7 +114,7 @@
               <span class="title-cart">Panier</span>
             </div>
             <div class="col-sm-3 right">
-            <a href="http://bit.ly/formation-formulaire" class="checkout-btn">PAIEMENT SÉCURISÉ</a>
+            <button class="checkout-btn">PAIEMENT SÉCURISÉ</button>
             </div>
           </div>
           <div class="row form-cart">
@@ -204,7 +204,7 @@
               <img src="img/cinqs/cb-icon.png" alt="cb-image" />
             </div>
             <div class="col-sm-3 right">
-              <button id="customButton" class="checkout-btn">PAIEMENT SÉCURISÉ</button>
+              <button class="checkout-btn">PAIEMENT SÉCURISÉ</button>
             </div>
           </div>
 
