Edit article name

--- a/cart.html
+++ b/cart.html
@@ -387,7 +387,7 @@ var google_remarketing_only = true;
   });
 
   var options = {
-    name: 'Préparation et examen VTC',
+    name: 'Pack Carte VTC',
     description: '50% de réduction sur le pack',
     currency: 'eur',
     amount: 54400
