Edit some texts

--- a/cart.html
+++ b/cart.html
@@ -133,7 +133,7 @@
           </div>
           <div class="row content-cart">
             <div class="col-sm-6">
-              <p class="article-cart">Formation e-learning</p>
+              <p class="article-cart">Formation e-learning par CINQS</p>
               <span class="promo">REMISE EXCEPTIONNELLE DE 50%</span><br>
               <span>valable jusqu'au 29/02/2016
               <br><br>
