Edit bounce bar

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 		<div class="main-container">
 
       <a class="promo-banner" href="http://bit.ly/formation-bounce">
-        50% DE REMISE SUR VOTRE FORMATION - VALABLE JUSQU'AU 29/02/16 - CLIQUEZ ICI
+        50% DE REMISE SUR VOTRE FORMATION - OFFRE LIMITÉE - CLIQUEZ ICI
       </a>
 
       <section class="hero-slider">
