--- a/devenir-chauffeur.html
+++ b/devenir-chauffeur.html
@@ -205,7 +205,7 @@
 
 							<div class="row list2">
 								<div class="col-sm-12 text-center">
-									<a href="http://bit.ly/formation-formulaire" title="demande de dossier d'inscription et inscription à la formation" class="btn btn-red btn-primary btn-lg btn-filled">OBTENEZ VOTRE CARTE VTC</a>
+									<a href="http://bit.ly/formation-formulaire" target="_blank" title="demande de dossier d'inscription et inscription à la formation" class="btn btn-red btn-primary btn-lg btn-filled">OBTENEZ VOTRE CARTE VTC</a>
 								</div>
 							</div>
 						</li>
@@ -226,7 +226,7 @@
 
 							<div class="row list2">
 								<div class="col-sm-12 text-center">
-									<a href="http://bit.ly/formation-formulaire" title="demande de dossier d'inscription et inscription à la formation" class="btn btn-red btn-primary btn-lg btn-filled">OBTENEZ VOTRE CARTE VTC</a>
+									<a href="http://bit.ly/formation-formulaire" target="_blank" title="demande de dossier d'inscription et inscription à la formation" class="btn btn-red btn-primary btn-lg btn-filled">OBTENEZ VOTRE CARTE VTC</a>
 								</div>
 							</div>
 						</li>
@@ -240,7 +240,7 @@
 				<div class="container-fluid">
 					<div class="row">
             <div class="col-md-5">
-              <a href="http://bit.ly/formation-formulaire.html" class="background-image"></a>
+              <a href="http://bit.ly/formation-formulaire" target="_blank" class="background-image"></a>
             </div>
 
 						<div class="col-md-6 col-md-offset-1 content clearfix">
@@ -295,10 +295,10 @@
                 <li>Obtenir<strong>une note supérieur ou égale à 12/20 à l'examen VTC</strong> réalisé auprès d'un <strong>centre de formation agrée.</strong></li>
               </ul>
               <br>
-              <a href="http://bit.ly/formation-formulaire" class="more-button">En savoir plus ></a>
+              <a href="http://bit.ly/formation-formulaire" target="_blank" class="more-button">En savoir plus ></a>
             </div>
             <div class="col-md-5 col-md-offset-1">
-              <a href="http://bit.ly/formation-formulaire" class="background-image2"></a>
+              <a href="http://bit.ly/formation-formulaire" target="_blank" class="background-image2"></a>
             </div>
           </div>
         </div>
@@ -309,7 +309,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-md-5">
-                <a href="http://bit.ly/formation-formulaire.html" class="background-image3"></a>
+                <a href="http://bit.ly/formation-formulaire" target="_blank" class="background-image3"></a>
               </div>
 
               <div class="col-md-6 col-md-offset-1 content clearfix">
@@ -351,7 +351,7 @@
 			<div class="containter">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<a href="http://bit.ly/formation-formulaire" class="btn btn-red btn-primary btn-filled btn-lg" title="demande de dossier d'inscription et inscription à la formation">OBTENEZ VOTRE CARTE VTC</a>
+						<a href="http://bit.ly/formation-formulaire" target="_blank" class="btn btn-red btn-primary btn-filled btn-lg" title="demande de dossier d'inscription et inscription à la formation">OBTENEZ VOTRE CARTE VTC</a>
 					</div>
 				</div>
 			</div>
@@ -384,7 +384,7 @@
               <p class="titlefooter">Contact</p>
               <p>
                 contact.formation@cinq-s.com<br>
-                <a href="http://bit.ly/formation-formulaire">Contactez-nous</a>
+                <a href="http://bit.ly/formation-formulaire" target="_blank">Contactez-nous</a>
               </p>
             </div>
 
