--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 
 		<div class="main-container">
 
-      <a class="promo-banner" href="http://bit.ly/formation-bounce">
-        50% DE REMISE SUR VOTRE FORMATION - OFFRE LIMITÉE - CLIQUEZ ICI
+      <a class="promo-banner" href="http://bit.ly/formation-bounce" target="_blank">
+        25% DE REMISE SUR VOTRE FORMATION - OFFRE LIMITÉE - CLIQUEZ ICI
       </a>
 
       <section class="hero-slider">
@@ -123,7 +123,7 @@
                 <div class="col-md-12 col-sm-9 text-center">
                   <h1 class="text-white">Réussite à l'examen VTC 100% garantie</h1>
 
-                  <a href="http://bit.ly/formation-formulaire" class="btn btn-red btn-primary btn-filled">OBTENEZ VOTRE CARTE VTC</a>
+                  <a href="http://bit.ly/formation-formulaire" target="_blank" class="btn btn-red btn-primary btn-filled">OBTENEZ VOTRE CARTE VTC</a>
                 </div>
               </div>
             </div>
@@ -143,7 +143,7 @@
 									<i class="icon  icon_ribbon_alt"></i>
 								</div>
 								<div class="pull-right">
-									<h2>Devenir chauffeur VTC pour 790€ TTC</h2>
+									<h2>Devenir chauffeur VTC pour 590€ TTC</h2>
 									<p>
                     <strong>Inclut dans la formation :</strong><br><br>
                     • 5 modules de préparation à l’examen certifié<br>
@@ -154,7 +154,7 @@
                     La formation est ouverte à tous, partout en France. Il n’y a pas de niveau de formation minimum.<br><br>
                     Vous avez accés aux contenus en illimité jusqu'à ce que vous réussissiez l'examen final. Sans frais supplémentaire, sans date limite.<br><br>
 									</p>
-                  <a href="http://bit.ly/formation-formulaire" class="more-button">En savoir plus ></a>
+                  <a href="http://bit.ly/formation-formulaire" target="_blank" class="more-button">En savoir plus ></a>
 								</div>
 							</div>
 						</div>
@@ -165,7 +165,7 @@
 									<i class="icon icon_briefcase"></i>
 								</div>
 								<div class="pull-right">
-                  <h2>Examen de conducteur VTC - 149€ TTC</h2>
+                  <h2>Examen de conducteur VTC - 199€ TTC</h2>
                   <p>
                     Passez votre examen VTC dans les meilleures conditions de confort et de concentration
                     <br><br>
@@ -176,7 +176,7 @@
                     <br><br>
                     <strong>Vous pouvez passer cet examen en candidat libre, toutefois nous vous recommandons de suivre une formation pour l’aborder dans les meilleures conditions.</strong>
                   </p>
-                  <a href="http://bit.ly/formation-formulaire" class="more-button">En savoir plus ></a>
+                  <a href="http://bit.ly/formation-formulaire" target="_blank" class="more-button">En savoir plus ></a>
 								</div>
 							</div>
 						</div>
@@ -201,7 +201,7 @@
                     • Relation Client<br>
                     • Langue Française et Langue Anglaise
                   </p>
-                  <a href="http://bit.ly/formation-formulaire" class="more-button">En savoir plus ></a>
+                  <a href="http://bit.ly/formation-formulaire" target="_blank" class="more-button">En savoir plus ></a>
 								</div>
 							</div>
 						</div>
@@ -220,7 +220,7 @@
                     Ils vous apporteront l’ensemble du référentiel de connaissances nécessaires à la réussite de votre examen.<br>
                     <strong>Ces programmes sont optionnels et à la demande.</strong>
 									</p>
-                  <a href="http://bit.ly/formation-formulaire" class="more-button">En savoir plus ></a>
+                  <a href="http://bit.ly/formation-formulaire" target="_blank" class="more-button">En savoir plus ></a>
 								</div>
 							</div>
 						</div>
@@ -231,7 +231,7 @@
 				<div class="containter">
 					<div class="row">
 						<div class="col-sm-12 text-center">
-							<a href="http://bit.ly/formation-formulaire" title="demande de dossier d'inscription et inscription à la formation" class="btn btn-red btn-primary btn-lg btn-filled">OBTENEZ VOTRE CARTE VTC</a>
+							<a href="http://bit.ly/formation-formulaire" target="_blank" title="demande de dossier d'inscription et inscription à la formation" class="btn btn-red btn-primary btn-lg btn-filled">OBTENEZ VOTRE CARTE VTC</a>
 						</div>
 					</div>
 				</div>
@@ -257,7 +257,7 @@
             <p class="titlefooter">Contact</p>
             <p>
               contact.formation@cinq-s.com<br>
-              <a href="http://bit.ly/formation-formulaire">Contactez-nous</a>
+              <a href="http://bit.ly/formation-formulaire" target="_blank">Contactez-nous</a>
             </p>
           </div>
 
