--- a/programme-formation-continue-vtc.html
+++ b/programme-formation-continue-vtc.html
@@ -63,7 +63,7 @@
                   <li><a href="/" title="Formation chauffeur VTC Paris et Ile de France">La formation</a></li>
                   <li><a href="/programme-formation-continue-vtc.html" class="active" title="Programme de la formation VTC">Formation continue</a></li>
                   <li><a href="/devenir-chauffeur.html" title="Pourquoi devenir chauffeur vtc ?">Devenir chauffeur</a></li>
-                  <li><a href="http://bit.ly/formation-formulaire" title="dossier d'inscription et inscription à la formation">Inscription</a></li>
+                  <li><a href="http://bit.ly/formation-formulaire" target="_blank" title="dossier d'inscription et inscription à la formation">Inscription</a></li>
                   <!-- <li><a href="/reglementation.html" title="réglementation VTC">Réglementation</a></li> -->
                 </ul>
   							<ul class="social-icons text-right">
@@ -132,7 +132,7 @@
 
 							<div class="row list2">
 								<div class="col-sm-12 text-center">
-									<a href="http://bit.ly/formation-formulaire" title="demande de dossier d'inscription et inscription à la formation continue" class="btn btn-red btn-primary btn-lg btn-filled">OBTENEZ VOTRE CARTE VTC</a>
+									<a href="http://bit.ly/formation-formulaire" target="_blank" title="demande de dossier d'inscription et inscription à la formation continue" class="btn btn-red btn-primary btn-lg btn-filled">OBTENEZ VOTRE CARTE VTC</a>
 								</div>
 							</div>
 
@@ -144,7 +144,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-md-5">
-                <a href="http://bit.ly/formation-formulaire.html" class="background-image"></a>
+                <a href="http://bit.ly/formation-formulaire" target="_blank" class="background-image"></a>
               </div>
 
               <div class="col-md-6 col-md-offset-1 content clearfix">
@@ -173,7 +173,7 @@
 
               </div>
               <div class="col-md-5 col-md-offset-1">
-                <a href="http://bit.ly/formation-formulaire" class="background-image2"></a>
+                <a href="http://bit.ly/formation-formulaire" target="_blank" class="background-image2"></a>
               </div>
             </div>
           </div>
@@ -184,7 +184,7 @@
             <div class="container-fluid">
               <div class="row">
                 <div class="col-md-5">
-                  <a href="http://bit.ly/formation-formulaire.html" class="background-image3"></a>
+                  <a href="http://bit.ly/formation-formulaire" target="_blank" class="background-image3"></a>
                 </div>
 
                 <div class="col-md-6 col-md-offset-1 content clearfix">
@@ -211,7 +211,7 @@
 			<div class="containter">
         <div class="row list2">
           <div class="col-sm-12 text-center">
-            <a href="http://bit.ly/formation-formulaire" title="demande de dossier d'inscription et inscription à la formation continue" class="btn btn-red btn-primary btn-lg btn-filled">OBTENEZ VOTRE CARTE VTC</a>
+            <a href="http://bit.ly/formation-formulaire" target="_blank" title="demande de dossier d'inscription et inscription à la formation continue" class="btn btn-red btn-primary btn-lg btn-filled">OBTENEZ VOTRE CARTE VTC</a>
           </div>
         </div>
 
@@ -245,7 +245,7 @@
               <p class="titlefooter">Contact</p>
               <p>
                 contact.formation@cinq-s.com<br>
-                <a href="http://bit.ly/formation-formulaire">Contactez-nous</a>
+                <a href="http://bit.ly/formation-formulaire" target="_blank">Contactez-nous</a>
               </p>
             </div>
 
