Edit some texts

--- a/formation-chauffeur-vtc-strasbourg.html
+++ b/formation-chauffeur-vtc-strasbourg.html
@@ -7,7 +7,7 @@
 <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>Formation VTC : obtenez votre carte professionnelle</title>
+        <title>Formation VTC à Strasbourg : obtenez votre carte professionnelle</title>
         <meta name="description" content="Formation VTC à Strasbourg. Formez-vous au métier de chauffeur et obtenez votre carte professionnelle. Formation agréée pour devenir chauffeur de maître.">
         <meta name="keywords" content="Formation Chauffeur VTC, Formation VTC, Formation VTC Strasbourg, Service VTC, Stage VTC, Chauffeur privé, Devenir chauffeur, VTC, VTC Strasbourg, Chauffeur VTC, Formation chauffeur de maître, Formation chauffeur, Devenir chauffeur de grande remise, Formation VTC pole emploi, Chauffeur VTC auto entrepreneur, Chauffeur vtc a son compte, Chauffeur vtc diplome">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -121,7 +121,7 @@
             <div class="container align-vertical">
               <div class="row">
                 <div class="col-md-12 col-sm-9 text-center">
-                  <h1 class="text-white">Réussite à l'examen VTC 100% garantie</h1>
+                  <h1 class="text-white">Réussite à l'examen VTC 100% garantie à Strasbourg</h1>
 
                   <a href="http://bit.ly/formation-formulaire" target="_blank" class="btn btn-red btn-primary btn-filled">OBTENEZ VOTRE CARTE VTC</a>
                 </div>
