--- a/formation-chauffeur-vtc-lille.html
+++ b/formation-chauffeur-vtc-lille.html
@@ -121,7 +121,7 @@
             <div class="container align-vertical">
               <div class="row">
                 <div class="col-md-12 col-sm-9 text-center">
-                  <h1 class="text-white">Réussite à l'examen VTC 100% garantie</h1>
+                  <h1 class="text-white">Réussite à l'examen VTC 100% garantie à Lille</h1>
 
                   <a href="http://bit.ly/formation-formulaire" target="_blank" class="btn btn-red btn-primary btn-filled">OBTENEZ VOTRE CARTE VTC</a>
                 </div>
