--- a/formation-chauffeur-vtc-nice.html
+++ b/formation-chauffeur-vtc-nice.html
@@ -123,7 +123,7 @@
                 <div class="col-md-12 col-sm-9 text-center">
                   <h1 class="text-white">Réussite à l'examen VTC 100% garantie à Nice</h1>
 
-                  <a href="http://bit.ly/formation-formulaire" target="_blank" class="btn btn-red btn-primary btn-filled">OBTENEZ VOTRE CARTE VTC</a>
+                  <a href="http://bit.ly/formation-formulaire" target="_blank" class="btn btn-red btn-primary btn-filled">OBTENEZ VOTRE CARTE VTC À NICE</a>
                 </div>
               </div>
             </div>
@@ -231,7 +231,7 @@
 				<div class="containter">
 					<div class="row">
 						<div class="col-sm-12 text-center">
-							<a href="http://bit.ly/formation-formulaire" target="_blank" title="demande de dossier d'inscription et inscription à la formation" class="btn btn-red btn-primary btn-lg btn-filled">OBTENEZ VOTRE CARTE VTC</a>
+							<a href="http://bit.ly/formation-formulaire" target="_blank" title="demande de dossier d'inscription et inscription à la formation" class="btn btn-red btn-primary btn-lg btn-filled">OBTENEZ VOTRE CARTE VTC À NICE</a>
 						</div>
 					</div>
 				</div>
