Edit typeform links

--- a/formation-chauffeur-vtc-lille.html
+++ b/formation-chauffeur-vtc-lille.html
@@ -63,7 +63,7 @@
   								<li><a href="/" class="active" title="Formation chauffeur VTC Lille">Préparation</a></li>
   								<li><a href="/programme-formation-continue-vtc.html" title="Programme de la formation VTC">Formation continue</a></li>
                   <li><a href="/devenir-chauffeur.html" title="Le métier de chauffeur VTC">Le métier de chauffeur</a></li>
-  								<li><a href="http://bit.ly/formation-formulaire" title="dossier d'inscription à la formation">Inscription</a></li>
+  								<li><a href="https://goo.gl/VK0Kkc" title="dossier d'inscription à la formation">Inscription</a></li>
   								<!-- <li><a href="/reglementation.html" title="réglementation VTC">Réglementation</a></li> -->
   							</ul>
                 <ul class="social-icons text-right">
@@ -117,7 +117,7 @@
                 <div class="col-md-12 col-sm-9 text-center">
                   <h1 class="text-white">Réussite à l'examen VTC 100% garantie à Lille</h1>
 
-                  <a href="http://bit.ly/formation-formulaire" target="_blank" class="btn btn-red btn-primary btn-filled">OBTENEZ VOTRE CARTE VTC À LILLE</a>
+                  <a href="https://goo.gl/VK0Kkc" target="_blank" class="btn btn-red btn-primary btn-filled">OBTENEZ VOTRE CARTE VTC À LILLE</a>
                 </div>
               </div>
             </div>
@@ -148,7 +148,7 @@
                     La formation est ouverte à tous, partout en France. Il n’y a pas de niveau de formation minimum.<br><br>
                     Vous avez accés aux contenus en illimité jusqu'à ce que vous réussissiez l'examen final. Sans frais supplémentaire, sans date limite.<br><br>
 									</p>
-                  <a href="http://bit.ly/formation-formulaire" target="_blank" class="more-button">En savoir plus ></a>
+                  <a href="https://goo.gl/VK0Kkc" target="_blank" class="more-button">En savoir plus ></a>
 								</div>
 							</div>
 						</div>
@@ -170,7 +170,7 @@
                     <br><br>
                     <strong>Vous pouvez passer cet examen en candidat libre, toutefois nous vous recommandons de suivre une formation pour l’aborder dans les meilleures conditions.</strong>
                   </p>
-                  <a href="http://bit.ly/formation-formulaire" target="_blank" class="more-button">En savoir plus ></a>
+                  <a href="https://goo.gl/VK0Kkc" target="_blank" class="more-button">En savoir plus ></a>
 								</div>
 							</div>
 						</div>
@@ -195,7 +195,7 @@
                     • Relation Client<br>
                     • Langue Française et Langue Anglaise
                   </p>
-                  <a href="http://bit.ly/formation-formulaire" target="_blank" class="more-button">En savoir plus ></a>
+                  <a href="https://goo.gl/VK0Kkc" target="_blank" class="more-button">En savoir plus ></a>
 								</div>
 							</div>
 						</div>
@@ -214,7 +214,7 @@
                     Ils vous apporteront l’ensemble du référentiel de connaissances nécessaires à la réussite de votre examen.<br>
                     <strong>Ces programmes sont optionnels et à la demande.</strong>
 									</p>
-                  <a href="http://bit.ly/formation-formulaire" target="_blank" class="more-button">En savoir plus ></a>
+                  <a href="https://goo.gl/VK0Kkc" target="_blank" class="more-button">En savoir plus ></a>
 								</div>
 							</div>
 						</div>
@@ -225,7 +225,7 @@
 				<div class="containter">
 					<div class="row">
 						<div class="col-sm-12 text-center">
-							<a href="http://bit.ly/formation-formulaire" target="_blank" title="demande de dossier d'inscription et inscription à la formation" class="btn btn-red btn-primary btn-lg btn-filled">OBTENEZ VOTRE CARTE VTC À LILLE</a>
+							<a href="https://goo.gl/VK0Kkc" target="_blank" title="demande de dossier d'inscription et inscription à la formation" class="btn btn-red btn-primary btn-lg btn-filled">OBTENEZ VOTRE CARTE VTC À LILLE</a>
 						</div>
 					</div>
 				</div>
@@ -251,7 +251,7 @@
             <p class="titlefooter">Contact</p>
             <p>
               contact.formation@cinq-s.com<br>
-              <a href="http://bit.ly/formation-formulaire" target="_blank">Contactez-nous</a>
+              <a href="https://goo.gl/VK0Kkc" target="_blank">Contactez-nous</a>
             </p>
           </div>
 
