--- a/devenir-chauffeur.html
+++ b/devenir-chauffeur.html
@@ -58,7 +58,7 @@
                     <li><a href="/" title="Formation chauffeur VTC Paris">Préparation</a></li>
                     <li><a href="/programme-formation-continue-vtc.html" title="Programme de la formation VTC">Formation continue</a></li>
                     <li><a href="/devenir-chauffeur.html" class="active" title="Le métier de chauffeur VTC">Le métier de chauffeur</a></li>
-                    <li><a href="http://bit.ly/formation-formulaire" title="dossier d'inscription et inscription à la formation">Inscription</a></li>
+                    <li><a href="https://goo.gl/VK0Kkc" title="dossier d'inscription et inscription à la formation">Inscription</a></li>
                     <!-- <li><a href="/reglementation.html" title="réglementation VTC">Réglementation</a></li> -->
                   </ul>
   							</ul>
@@ -157,7 +157,7 @@
 
 							<div class="row list2">
 								<div class="col-sm-12 text-center">
-									<a href="http://bit.ly/formation-formulaire" title="demande de dossier d'inscription et inscription à la formation" class="btn btn-red btn-primary btn-lg btn-filled">OBTENEZ VOTRE CARTE VTC</a>
+									<a href="https://goo.gl/VK0Kkc" title="demande de dossier d'inscription et inscription à la formation" class="btn btn-red btn-primary btn-lg btn-filled">OBTENEZ VOTRE CARTE VTC</a>
 								</div>
 							</div>
 						</li>
@@ -178,7 +178,7 @@
 
 							<div class="row list2">
 								<div class="col-sm-12 text-center">
-									<a href="http://bit.ly/formation-formulaire" title="demande de dossier d'inscription et inscription à la formation" class="btn btn-red btn-primary btn-lg btn-filled">OBTENEZ VOTRE CARTE VTC</a>
+									<a href="https://goo.gl/VK0Kkc" title="demande de dossier d'inscription et inscription à la formation" class="btn btn-red btn-primary btn-lg btn-filled">OBTENEZ VOTRE CARTE VTC</a>
 								</div>
 							</div>
 						</li>
@@ -199,7 +199,7 @@
 
 							<div class="row list2">
 								<div class="col-sm-12 text-center">
-									<a href="http://bit.ly/formation-formulaire" target="_blank" title="demande de dossier d'inscription et inscription à la formation" class="btn btn-red btn-primary btn-lg btn-filled">OBTENEZ VOTRE CARTE VTC</a>
+									<a href="https://goo.gl/VK0Kkc" target="_blank" title="demande de dossier d'inscription et inscription à la formation" class="btn btn-red btn-primary btn-lg btn-filled">OBTENEZ VOTRE CARTE VTC</a>
 								</div>
 							</div>
 						</li>
@@ -220,7 +220,7 @@
 
 							<div class="row list2">
 								<div class="col-sm-12 text-center">
-									<a href="http://bit.ly/formation-formulaire" target="_blank" title="demande de dossier d'inscription et inscription à la formation" class="btn btn-red btn-primary btn-lg btn-filled">OBTENEZ VOTRE CARTE VTC</a>
+									<a href="https://goo.gl/VK0Kkc" target="_blank" title="demande de dossier d'inscription et inscription à la formation" class="btn btn-red btn-primary btn-lg btn-filled">OBTENEZ VOTRE CARTE VTC</a>
 								</div>
 							</div>
 						</li>
@@ -234,7 +234,7 @@
 				<div class="container-fluid">
 					<div class="row">
             <div class="col-md-5">
-              <a href="http://bit.ly/formation-formulaire" target="_blank" class="background-image"></a>
+              <a href="https://goo.gl/VK0Kkc" target="_blank" class="background-image"></a>
             </div>
 
 						<div class="col-md-6 col-md-offset-1 content clearfix">
@@ -289,10 +289,10 @@
                 <li>Obtenir<strong>une note supérieur ou égale à 12/20 à l'examen VTC</strong> réalisé auprès d'un <strong>centre de formation agrée.</strong></li>
               </ul>
               <br>
-              <a href="http://bit.ly/formation-formulaire" target="_blank" class="more-button">En savoir plus ></a>
+              <a href="https://goo.gl/VK0Kkc" target="_blank" class="more-button">En savoir plus ></a>
             </div>
             <div class="col-md-5 col-md-offset-1">
-              <a href="http://bit.ly/formation-formulaire" target="_blank" class="background-image2"></a>
+              <a href="https://goo.gl/VK0Kkc" target="_blank" class="background-image2"></a>
             </div>
           </div>
         </div>
@@ -303,7 +303,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-md-5">
-                <a href="http://bit.ly/formation-formulaire" target="_blank" class="background-image3"></a>
+                <a href="https://goo.gl/VK0Kkc" target="_blank" class="background-image3"></a>
               </div>
 
               <div class="col-md-6 col-md-offset-1 content clearfix">
@@ -345,7 +345,7 @@
 			<div class="containter">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<a href="http://bit.ly/formation-formulaire" target="_blank" class="btn btn-red btn-primary btn-filled btn-lg" title="demande de dossier d'inscription et inscription à la formation">OBTENEZ VOTRE CARTE VTC</a>
+						<a href="https://goo.gl/VK0Kkc" target="_blank" class="btn btn-red btn-primary btn-filled btn-lg" title="demande de dossier d'inscription et inscription à la formation">OBTENEZ VOTRE CARTE VTC</a>
 					</div>
 				</div>
 			</div>
@@ -378,7 +378,7 @@
               <p class="titlefooter">Contact</p>
               <p>
                 contact.formation@cinq-s.com<br>
-                <a href="http://bit.ly/formation-formulaire" target="_blank">Contactez-nous</a>
+                <a href="https://goo.gl/VK0Kkc" target="_blank">Contactez-nous</a>
               </p>
             </div>
 
