Edit some texts

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="container align-vertical">
               <div class="row">
                 <div class="col-md-12 col-sm-9 text-center">
-                  <h1 class="text-white">Réussite à l'examen VTC 100% garantie</h1>
+                  <h1 class="text-white">Passez votre examen VTC en toute sérénité</h1>
 
                   <a href="https://goo.gl/VK0Kkc" target="_blank" class="btn btn-red btn-primary btn-filled">OBTENEZ VOTRE CARTE VTC</a>
                 </div>
@@ -153,23 +153,29 @@
 							</div>
 						</div>
 
-						<div class="col-sm-6">
+            <div class="col-sm-6">
 							<div class="feature feature-icon-large">
 								<div class="pull-left">
-									<i class="icon icon_briefcase"></i>
+									<i class="icon icon_calendar"></i>
 								</div>
 								<div class="pull-right">
-                  <h2>Examen de conducteur VTC - 199€ TTC</h2>
-                  <p>
-                    Passez votre examen VTC dans les meilleures conditions de confort et de concentration
+									<h2>Formation présentiel intensive pour 1290€ TTC</h2>
+									<p>Passez l'examen en toute sérénité : des professeurs dédiés, des interventions d'exepert du secteur, des mises en situation pour vous donner les clés pour devenir chauffeur de maître, des cours    d'anglais adaptés par niveau.
                     <br><br>
-                    Avant toute inscription, assurez-vous que vous répondez aux critères ci-dessous :
-                    <br><br>
-                    • Un permis de conduire B délivré il y a au moins 3 ans (2 ans en cas de conduite accompagnée)<br>
-                    • Votre PSC1 de moins de 2 ans
-                    <br><br>
-                    <strong>Vous pouvez passer cet examen en candidat libre, toutefois nous vous recommandons de suivre une formation pour l’aborder dans les meilleures conditions.</strong>
-                  </p>
+                    <strong>80 heures intensives :</strong>
+									</p>
+
+									<ul>
+										<li>• 40 heures de gestion et droit des transports (coef. 9)</li>
+										<li>• 16 heures de relation client (coef. 2)</li>
+										<li>• 24 heures de langue (coef. 2)</li>
+									</ul>
+
+                  <p><strong>Facilité de paiement</strong></p>
+                  <ul>
+										<li>Paiement en 3 fois, sans frais.</li>
+										<li>1290 €</li>
+									</ul>
                   <a href="https://goo.gl/VK0Kkc" target="_blank" class="more-button">En savoir plus ></a>
 								</div>
 							</div>
@@ -200,24 +206,27 @@
 							</div>
 						</div>
 
-						<div class="col-sm-6">
-							<div class="feature feature-icon-large">
-								<div class="pull-left">
-									<i class="icon icon_calendar"></i>
-								</div>
-								<div class="pull-right">
-									<h2>Stage présentiel “intensif” optionnel</h2>
-									<p>
-                    En  option, bénéficiez de l'accès à des modules spécifiques pour optimiser vos résultats :<br><br>
-                    • Astuces et conseils du chauffeur de Grande Remise (sessions de 4h00)<br>
-                    • Anglais Niveau B1 (sessions de 8h00)<br><br>
-                    Ils vous apporteront l’ensemble du référentiel de connaissances nécessaires à la réussite de votre examen.<br>
-                    <strong>Ces programmes sont optionnels et à la demande.</strong>
-									</p>
+            <div class="col-sm-6">
+              <div class="feature feature-icon-large">
+                <div class="pull-left">
+                  <i class="icon icon_briefcase"></i>
+                </div>
+                <div class="pull-right">
+                  <h2>Examen de conducteur VTC - 199€ TTC</h2>
+                  <p>
+                    Passez votre examen VTC dans les meilleures conditions de confort et de concentration
+                    <br><br>
+                    Avant toute inscription, assurez-vous que vous répondez aux critères ci-dessous :
+                    <br><br>
+                    • Un permis de conduire B délivré il y a au moins 3 ans (2 ans en cas de conduite accompagnée)<br>
+                    • Votre PSC1 de moins de 2 ans
+                    <br><br>
+                    <strong>Vous pouvez passer cet examen en candidat libre, toutefois nous vous recommandons de suivre une formation pour l’aborder dans les meilleures conditions.</strong>
+                  </p>
                   <a href="https://goo.gl/VK0Kkc" target="_blank" class="more-button">En savoir plus ></a>
-								</div>
-							</div>
-						</div>
+                </div>
+              </div>
+            </div>
 					</div>
 
 				</div>
