Edit some texts

--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
 									<i class="icon  icon_ribbon_alt"></i>
 								</div>
 								<div class="pull-right">
-									<h2>Devenir chauffeur VTC pour 590€ TTC</h2>
+									<h2>Devenir chauffeur VTC avec le E-learning pour 590€ TTC</h2>
 									<p>
-                    <strong>Inclut dans la formation :</strong><br><br>
+                    <strong>Inclut dans la formation en ligne :</strong><br><br>
                     • 5 modules de préparation à l’examen certifié<br>
                     • + de 400 questions préparatoires<br>
                     • 150 heures de contenu interactif (vidéos, documents officiels, mises en situation)<br>
