Edit some texts

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <strong>Inclut dans la formation en ligne :</strong><br><br>
                     • 5 modules de préparation à l’examen certifié<br>
                     • + de 400 questions préparatoires<br>
-                    • 150 heures de contenu interactif (vidéos, documents officiels, mises en situation)<br>
+                    • Contenu interactif sur mesure (vidéos, documents officiels, mises en situation)<br>
                     • Examens blancs<br>
                     • 1 module offert sur la connaissance et l’histoire d’un ville française de votre choix<br><br><br>
                     La formation est ouverte à tous, partout en France. Il n’y a pas de niveau de formation minimum.<br><br>
