--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     • + de 400 questions préparatoires<br>
                     • Contenu interactif sur mesure (vidéos, documents officiels, mises en situation)<br>
                     • Examens blancs<br>
-                    • 1 module offert sur la connaissance et l’histoire d’un ville française de votre choix<br><br><br>
+                    • 1 module offert sur la connaissance et l’histoire d’un ville française de votre choix<br><br>
                     La formation est ouverte à tous, partout en France. Il n’y a pas de niveau de formation minimum.<br><br>
                     Vous avez accés aux contenus en illimité jusqu'à ce que vous réussissiez l'examen final. Sans frais supplémentaire, sans date limite.<br><br>
 									</p>
