Edit some texts

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 		<!-- Open Graph data -->
     <meta property="og:site_name" content="Aexid Formation">
-    <meta property="og:title" content="Obtenez votre carte professionnelle à partir de 990€." />
+    <meta property="og:title" content="Obtenez votre carte professionnelle à partir de 490€." />
     <meta property="og:description" content="Aexid Formation propose une formation VTC 100% en ligne, obtention de la carte VTC 100% garantie." />
     <meta property="og:url" content="http://aexid-formation.com" />
     <meta property="og:type" content="website" />
@@ -102,7 +102,7 @@
 		<div class="main-container">
 
       <a class="promo-banner" href="https://goo.gl/VK0Kkc" target="_blank">
-        25% DE REMISE SUR VOTRE FORMATION - OFFRE LIMITÉE - CLIQUEZ ICI
+        LA FORMULE "FORMATION ET EXAMEN" POUR SEULEMENT 490€ - OFFRE LIMITÉE - CLIQUEZ ICI
       </a>
 
       <section class="hero-slider">
@@ -137,7 +137,7 @@
 									<i class="icon  icon_ribbon_alt"></i>
 								</div>
 								<div class="pull-right">
-									<h2>Devenir chauffeur VTC avec le E-learning pour 590€ TTC</h2>
+									<h2>Devenir chauffeur VTC avec la formule "E-learning et Examen" pour 490€ TTC</h2>
 									<p>
                     <strong>Inclut dans la formation en ligne :</strong><br><br>
                     • 5 modules de préparation à l’examen certifié<br>
@@ -159,8 +159,8 @@
 									<i class="icon icon_calendar"></i>
 								</div>
 								<div class="pull-right">
-									<h2>Formation présentiel intensive pour 1290€ TTC</h2>
-									<p>Passez l'examen en toute sérénité : des professeurs dédiés, des interventions d'exepert du secteur, des mises en situation pour vous donner les clés pour devenir chauffeur de maître, des cours    d'anglais adaptés par niveau.
+									<h2>Formation présentiel intensive pour 890€ TTC</h2>
+									<p>Passez l'examen en toute sérénité : des professeurs dédiés, des interventions d'exepert du secteur, des mises en situation pour vous donner les clés pour devenir chauffeur de maître, des cours d'anglais adaptés par niveau.
                     <br><br>
                     <strong>80 heures intensives :</strong>
 									</p>
@@ -174,7 +174,7 @@
                   <p><strong>Facilité de paiement</strong></p>
                   <ul>
 										<li>Paiement en 3 fois, sans frais.</li>
-										<li>1290 €</li>
+										<li>890 €</li>
 									</ul>
                   <a href="https://goo.gl/VK0Kkc" target="_blank" class="more-button">En savoir plus ></a>
 								</div>
@@ -212,7 +212,7 @@
                   <i class="icon icon_briefcase"></i>
                 </div>
                 <div class="pull-right">
-                  <h2>Examen de conducteur VTC - 199€ TTC</h2>
+                  <h2>Examen de conducteur VTC - 149€ TTC</h2>
                   <p>
                     Passez votre examen VTC dans les meilleures conditions de confort et de concentration
                     <br><br>
